--- a/templates/groovy.sh.erb
+++ b/templates/groovy.sh.erb
@@ -1,2 +1,2 @@
-export GROOVY_HOME=<%= target_real %>
-export PATH="$PATH:<%= target_real %>/bin"
+export GROOVY_HOME=<%= @groovy_dir %>
+export PATH="$PATH:<%= @groovy_dir %>/bin"
